tenzir/integration/data/reference/cron/test_cron_errors/step_04.ref
error: bad cron expression: "cron expression must have six fields"
 --> <input>:1:6
  |
1 | cron version
  |      ^^^^^^^ 
  |